# Calculator

./: CMakeLists.txt  Dockerfile  Makefile  README.md  calculator  requirements.txt
doc/: C++ Project Structure.md
include/: Calculator.h
src/: Calculator.cpp  linux_main.py  main.cpp  main.py  server.cpp  test.cpp
test/: test_calculator.cpp
web/: index.html  script.js  styles.css
